tech/aws/experts-aws/conhecendo-a-nuvem/cloudformation-102/pratica00-estrutura-redes/template-07-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
  Template utilizado para construcao de toda a infraestrutura de redes em uma conta AWS, 
  incluindo componentes como VPC, Internet Gateway, Route Tables, NACLs, Security Groups 
  e instancias EC2.
# Parâmetros a serem utilizados na implantação de recursos
Parameters:
  # Endereço SSH com permissão de entrada às instâncias
  SSHInboundAddress:
    Description: Endereco de IP a ser permitido para conexoes SSH em instancias EC2 criadas
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3}).(\d{1,3}).(\d{1,3}).(\d{1,3})/(\d{1,2})
    ConstraintDescription: Precisa ser um bloco CIDR valido no formato X.X.X.X/X
  # Chave de acesso
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Chave de acesso para instancias EC2
# Mapeamentos customizados a serem utilizados nos recursos
Mappings:
  # Mapeamentos relacionados às AZs
  AvailabilityZone:
    1a:
      Name: sa-east-1a
    1c:
      Name: sa-east-1c
  # Mapeamentos relacionados à VPC
  VPC:
    CidrBlock:
      Value: 172.33.0.0/16
  # Mapeamentos relacionados às EC2
  EC2:
    Instance:
      Type: t2.micro
      ImageId: ami-037c192f0fa52a358
    InstanceProfile:
      SSMRoleName: ec2-ssm-instance-profile
# Recursos a serem implantados no CloudFormation
Resources:
  # Virtual Private Cloud customizada
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap [VPC, CidrBlock, Value]
      Tags:
        - Key: Name
          Value: cfn-app-vpc
  # Subnets públicas e privadas em cada AZ
  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.33.0.0/24
      AvailabilityZone: !FindInMap [AvailabilityZone, 1a, Name]
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pub-subnet-1a
  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.33.1.0/24
      AvailabilityZone: !FindInMap [AvailabilityZone, 1a, Name]
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pvt-subnet-1a
  PublicSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.33.2.0/24
      AvailabilityZone: !FindInMap [AvailabilityZone, 1c, Name]
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pub-subnet-1c
  PrivateSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 172.33.3.0/24
      AvailabilityZone: !FindInMap [AvailabilityZone, 1c, Name]
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pvt-subnet-1c
  # Internet Gateway e anexo à VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: cfn-app-igw
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  # Route tables com rotas públicas e privadas
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pub-rt
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pvt-rt
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  # Associações de Route Tables com subnets
  PublicSubnetRTAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1a
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetRTAssociation1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1c
      RouteTableId: !Ref PublicRouteTable
  PrivateSubnetRTAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1a
      RouteTableId: !Ref PrivateRouteTable
  PrivateSubnetRTAssociation1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1c
      RouteTableId: !Ref PrivateRouteTable
  # Security Groups
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: cfn-web-server-sg
      GroupDescription: Permite acesso pelas portas 80, 443 e 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHInboundAddress
          Description: Permite acesso SSH de IP do administrador
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Permite acesso HTTP de toda a internet
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Permite acesso HTTPS de toda a internet
      Tags:
        - Key: Name
          Value: cfn-web-server-sg
  BackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: cfn-backend-sg
      GroupDescription: Permite acesso pelas portas 22, 3306 e 5432 de recursos do Security Group do servidor web
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
          Description: Acesso SSH de recursos no SG do servidor web
        - IpProtocol: icmp
          FromPort: 8
          ToPort: -1
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
          Description: Acesso ICMP para ping de recursos no SG do servidor web
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
          Description: Acesso MySQL de recursos no SG do servidor web
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref WebServerSecurityGroup
          Description: Acesso PostgreSQL de recursos no SG do servidor web
      Tags:
        - Key: Name
          Value: cfn-backend-sg
  # Network Access Control List
  PublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pub-nacl
  PrivateNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: cfn-pvt-nacl
  PublicNACLSSHInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNACL
      RuleNumber: 100
      Protocol: 6
      PortRange:
        From: 22
        To: 22
      CidrBlock: !Ref SSHInboundAddress
      RuleAction: Allow
  PublicNACLHTTPInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNACL
      RuleNumber: 200
      Protocol: 6
      PortRange:
        From: 80
        To: 80
      CidrBlock: 0.0.0.0/0
      RuleAction: Allow
  PublicNACLHTTPSInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNACL
      RuleNumber: 300
      Protocol: 6
      PortRange:
        From: 443
        To: 443
      CidrBlock: 0.0.0.0/0
      RuleAction: Allow
  PublicNACLAllOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PublicNACL
      RuleNumber: 100
      Protocol: -1
      Egress: True
      CidrBlock: 0.0.0.0/0
      RuleAction: Allow
  PrivateNACLSSHInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNACL
      RuleNumber: 100
      Protocol: 6
      PortRange:
        From: 22
        To: 22
      CidrBlock: !GetAtt VPC.CidrBlock
      RuleAction: Allow
  PrivateNACLMySQLInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNACL
      RuleNumber: 200
      Protocol: 6
      PortRange:
        From: 3306
        To: 3306
      CidrBlock: !GetAtt VPC.CidrBlock
      RuleAction: Allow
  PrivateNACLPostgreSQLInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNACL
      RuleNumber: 300
      Protocol: 6
      PortRange:
        From: 5432
        To: 5432
      CidrBlock: !GetAtt VPC.CidrBlock
      RuleAction: Allow
  PrivateNACLICMPInbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNACL
      RuleNumber: 400
      Protocol: 1
      Icmp:
        Code: -1
        Type: -1
      CidrBlock: !GetAtt VPC.CidrBlock
      RuleAction: Allow
  rivateNACLEphemeralOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref PrivateNACL
      RuleNumber: 200
      Protocol: 6
      Egress: True
      PortRange:
        From: 1024
        To: 65535
      CidrBlock: 0.0.0.0/0
      RuleAction: Allow
  # Instâncias EC2
  PublicEC2Instance1a:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !FindInMap [EC2, Instance, Type]
      ImageId: !FindInMap [EC2, Instance, ImageId]
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: True
          DeviceIndex: 0
          DeleteOnTermination: True
          SubnetId:
            Ref: PublicSubnet1a
          GroupSet:
            - Ref: WebServerSecurityGroup        
      Tags:
        - Key: Name
          Value: cfn-web-server
  PrivateEC2Instance1a:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !FindInMap [EC2, Instance, Type]
      ImageId: !FindInMap [EC2, Instance, ImageId]
      KeyName: !Ref KeyName
      SubnetId: !Ref PrivateSubnet1a
      SecurityGroupIds:
        - !Ref BackendSecurityGroup
      Tags:
        - Key: Name
          Value: cfn-backend
    # EC2 SSM Instance Profile (Role IAM)
    # O código abaixo poderia ser utilizado para criar uma Role
    #IAMSSMRole:
    #  Type: AWS::IAM::Role
    #  Properties:
    #    RoleName: cfn-ec2-ssm-instance-profile
    #    AssumeRolePolicyDocument:
    #      Version: "2012-10-17"
    #      Statement:
    #        - Effect: Allow
    #          Principal:
    #            Service: 
    #              - ec2.amazonaws.com
    #          Action:
    #            - sts:AssumeRole
    #    Path: /
    #    ManagedPolicyArns:
    #      - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
  EC2InstanceProfileSSM:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: 
        #- Ref: IAMSSMRole
        - !FindInMap [EC2, InstanceProfile, SSMRoleName]
  PublicEC2InstanceSSM1c:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !FindInMap [EC2, Instance, Type]
      ImageId: !FindInMap [EC2, Instance, ImageId]
      IamInstanceProfile: !Ref EC2InstanceProfileSSM
      NetworkInterfaces:
        - AssociatePublicIpAddress: True
          DeviceIndex: 0
          DeleteOnTermination: True
          SubnetId:
            Ref: PublicSubnet1c
          GroupSet:
            - Ref: WebServerSecurityGroup        
      Tags:
        - Key: Name
          Value: cfn-ssm-instance
# Outputs
Outputs:
  SessionManagementListUrl:
    Description: Lista de instancias que podem ser conectadas via Session Manager
    Value: !Sub https://${AWS::Region}.console.aws.amazon.com/systems-manager/session-manager/start-session?region=${AWS::Region}
